# wilma-mcp

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/wilma_mcp/: __init__.py  cli.py  client.py  models.py  parsers.py  server.py
